got website sync script working

--- a/html-project/test.html
+++ b/html-project/test.html
@@ -9,7 +9,7 @@
 <body>
     <h1>This is just a test HTML file in root</h1>
     <p>Added an update.</p>
-    Link to <a href="a_folder/test.html">a_folder/test.html</a><br>
+    Link to <a href="a_folder/a_test.html">a_folder/test.html</a><br>
     Link to <a href="test.txt">text file</a>
 </body>
 </html>
