--- a/html-project/test.html
+++ b/html-project/test.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>This is just a test HTML file in root</h1>
-    <p>Added an update.</p>
+    <p>Added update 4</p>
     Link to <a href="a_folder/a_test.html">a_folder/test.html</a><br>
     Link to <a href="test.txt">text file</a>
 </body>
