--- a/html-project/test/index.html
+++ b/html-project/test/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>This is just an index HTML file in 'test' folder</h1>
+    <p>
+        Updated thrice
+    </p>
 </body>
 </html>
